--- a/src/app/components/landing-join/landing-join.component.html
+++ b/src/app/components/landing-join/landing-join.component.html
@@ -7,9 +7,9 @@
       <app-join-card></app-join-card>
     </div>
     <div class="basic-card-wrap self-end flex justify-stretch gap-10 pb-10">
-      <app-basic-card class="flex justify-stretch" srcImage="info_alfilo.png" title="AL FILO" body='Una comunidad disfrutar en compañia de todo el contenido de Star Citizen con un ritmo sano.'></app-basic-card>
-      <app-basic-card class="flex justify-stretch" srcImage="info_style.png" title="Estilo de juego" body="Somos Pro-Billete. Cumplimos los contratos. Realizamos todo tipo de actividades, un ataque a terceros debe tener un motivo económico."></app-basic-card>
-      <app-basic-card class="flex justify-stretch" srcImage="info_join.png" title="Hazte DAGA" body="Solicita tu rango de DAGA. Obtendrás acceso a Licencias, votaciones y creación de eventos."></app-basic-card>
+      <app-basic-card class="flex justify-stretch parallelogram delay-200" srcImage="info_alfilo.png" title="AL FILO" body='Una comunidad disfrutar en compañia de todo el contenido de Star Citizen con un ritmo sano.'></app-basic-card>
+      <app-basic-card class="flex justify-stretch parallelogram delay-400" srcImage="info_style.png" title="Estilo de juego" body="Somos Pro-Billete. Cumplimos los contratos. Realizamos todo tipo de actividades, un ataque a terceros debe tener un motivo económico."></app-basic-card>
+      <app-basic-card class="flex justify-stretch parallelogram delay-600" srcImage="info_join.png" title="Hazte DAGA" body="Solicita tu rango de DAGA. Obtendrás acceso a Licencias, votaciones y creación de eventos."></app-basic-card>
     </div>
   </div>
 </div>
