--- a/src/app/components/landing-activities/landing-activities.component.html
+++ b/src/app/components/landing-activities/landing-activities.component.html
@@ -13,32 +13,32 @@
     <div class="basis-4/12 border-t-2 border-r-2 w-6/12 self-start rounded-tr-2xl flex flex-col items-end">
       <div class="-mt-[9rem] flex gap-10">
         <div class="activity-option flex flex-col items-center gap-3 text-white hover:text-[#8cb9ca]">
-          <svg-icon src="/assets/images/activity/combat.svg" class="w-20 h-20"></svg-icon>
+          <app-svg-icon class="svg-activity" [path]="'assets/images/activity/combat.svg'"></app-svg-icon>
           <div class="font-bold text-lg">COMBATE</div>
           <input (click)="changeActivity('combat')" type="radio" class="radio radio-info bg-white" name="activityOption" aria-label="" checked/>
         </div>
         <div class="activity-option flex flex-col items-center gap-3 text-white hover:text-[#8cb9ca]">
-          <svg-icon src="/assets/images/activity/transport.svg" class="w-20 h-20"></svg-icon>
+          <app-svg-icon class="svg-activity" [path]="'assets/images/activity/transport.svg'"></app-svg-icon>
           <div class="font-bold text-lg">TRANSPORTE</div>
           <input (click)="changeActivity('transport')" type="radio" class="radio radio-info bg-white hover:text-[#8cb9ca] checked:bg-[#0394cc]" name="activityOption" aria-label=""/>
         </div>
         <div class="activity-option flex flex-col items-center gap-3 text-white hover:text-[#8cb9ca]">
-          <svg-icon src="/assets/images/activity/exploration.svg" class="w-20 h-20"></svg-icon>
+          <app-svg-icon class="svg-activity" [path]="'assets/images/activity/exploration.svg'"></app-svg-icon>
           <div class="font-bold text-lg">EXPLORACIÓN</div>
           <input (click)="changeActivity('exploration')" type="radio" class="radio radio-info bg-white hover:text-[#8cb9ca] checked:bg-[#0394cc]" name="activityOption" aria-label=""/>
         </div>
         <div class="activity-option flex flex-col items-center gap-3 text-white hover:text-[#8cb9ca]">
-          <svg-icon src="/assets/images/activity/industrial.svg" class="w-20 h-20"></svg-icon>
+          <app-svg-icon class="svg-activity" [path]="'assets/images/activity/industrial.svg'"></app-svg-icon>
           <div class="font-bold text-lg">INDUSTRIA</div>
           <input (click)="changeActivity('industrial')" type="radio" class="radio radio-info bg-white hover:text-[#8cb9ca] checked:bg-[#0394cc]" name="activityOption" aria-label=""/>
         </div>
         <div class="activity-option flex flex-col items-center gap-3 text-white hover:text-[#8cb9ca]">
-          <svg-icon src="/assets/images/activity/support.svg" class="w-20 h-20"></svg-icon>
+          <app-svg-icon class="svg-activity" [path]="'assets/images/activity/support.svg'"></app-svg-icon>
           <div class="font-bold text-lg">APOYO</div>
           <input (click)="changeActivity('support')" type="radio" class="radio radio-info bg-white hover:text-[#8cb9ca] checked:bg-[#0394cc]" name="activityOption" aria-label=""/>
         </div>
         <div class="activity-option flex flex-col items-center gap-3 text-white hover:text-[#8cb9ca]">
-          <svg-icon src="/assets/images/activity/competition.svg" class="w-20 h-20"></svg-icon>
+          <app-svg-icon class="svg-activity" [path]="'assets/images/activity/competition.svg'"></app-svg-icon>
           <div class="lala font-bold text-lg">COMPETICIÓN</div>
           <input (click)="changeActivity('competition')" type="radio" class="radio radio-info bg-white hover:text-[#8cb9ca] checked:bg-[#0394cc]" name="activityOption" aria-label=""/>
         </div>
