hotfix css activities

--- a/src/app/components/landing-activities/landing-activities.component.css
+++ b/src/app/components/landing-activities/landing-activities.component.css
@@ -25,7 +25,8 @@
       }
     }
 
-    &.selected {
+    &.selected,
+    &.selected:hover {
       .svg-activity {
         background-color: #0394cc;
       }
