adjust titles to new font in landing activities

--- a/src/app/components/landing-activities/landing-activities.component.css
+++ b/src/app/components/landing-activities/landing-activities.component.css
@@ -5,6 +5,11 @@
     height: calc(100vh - 66px);
   }
 
+  .subtitle,
+  .title {
+    font-family: 'Capital Daren Italic';
+  }
+
   .activity-option {
     .svg-activity {
       background-color: white;
