--- a/src/app/components/landing-activities/landing-activities.component.html
+++ b/src/app/components/landing-activities/landing-activities.component.html
@@ -1,9 +1,9 @@
 <div class="landing-activities max-w-2k mx-auto flex justify-center">
   <video #myVideo class="background-video absolute max-w-2k w-full object-cover -z-10" autoplay loop muted playsinline="true" webkit-playsinline="true" [src]="currentActivitiy.videoSrc" type="video/mp4"></video>
   <div class="flex flex-col w-full">
-    <div class="basis-8/12 flex flex-col basis items-center gap-10 pt-20">
-      <div class="font-bold text-4xl">PARTICIPA EN DIFERENTES</div>
-      <div class="font-bold text-8xl">ACTIVIDADES</div>
+    <div class="basis-8/12 flex flex-col basis items-center gap-2">
+      <div class="subtitle text-[3.5rem] ml-6 pt-2">PARTICIPA EN DIFERENTES</div>
+      <div class="title text-[9rem] leading-[6rem] mb-10">ACTIVIDADES</div>
       <div class="flex gap-20">
         <a href="https://discord.com/invite/ADgezdG" target="_blank" class="btn text-black ring-2 ring-white rounded-2xl font-black">Únete
           a AlFilo</a>
