--- a/src/app/components/chronology-card/chronology-card.component.html
+++ b/src/app/components/chronology-card/chronology-card.component.html
@@ -1,5 +1,5 @@
 <div class="flex gap-5">
-  <input *ngIf="left" type="radio" class="radio radio-info bg-white hover:text-[#8cb9ca] checked:bg-[#0394cc]" name="activityOption" aria-label=""/>
+  <input *ngIf="left" [ngClass]="{'left': left}" type="radio" class="radio radio-info bg-white hover:text-[#8cb9ca] checked:bg-[#0394cc]" name="activityOption" aria-label=""/>
   <div class="card border h-48 w-[32rem] bg-black shadow-xl bg-opacity-75">
     <div class="flex h-full">
       <img src="/assets/images/{{srcImage}}" alt="Logo" class="rounded-l-2xl w-5/12 object-cover" />
@@ -9,5 +9,5 @@
       </div>
     </div>
   </div>
-  <input *ngIf="!left" type="radio" class="radio radio-info bg-white hover:text-[#8cb9ca] checked:bg-[#0394cc]" name="activityOption" aria-label=""/>
+  <input *ngIf="!left" [ngClass]="{'right': !left}" type="radio" class="radio radio-info bg-white hover:text-[#8cb9ca] checked:bg-[#0394cc]" name="activityOption" aria-label=""/>
 </div>
