--- a/src/app/components/landing-chronology/landing-chronology.component.css
+++ b/src/app/components/landing-chronology/landing-chronology.component.css
@@ -1,3 +1,13 @@
 .landing-chronology {
   height: calc(100vh - 66px);
+
+  .title {
+    font-family: 'Capital Daren';
+  }
+
+  .svg-arrow {
+    background-color: white;
+    width: 5rem;
+    height: 5rem;
+  }
 }
