--- a/src/app/components/landing-chronology/landing-chronology.component.html
+++ b/src/app/components/landing-chronology/landing-chronology.component.html
@@ -4,7 +4,7 @@
     <app-chronology-card left="false" srcImage="info_style.png" title="Se une Lil Medusa" body='Prepárate para superar tus limites.'></app-chronology-card>
     <app-chronology-card left="false" srcImage="info_style.png" title="Se otorga el cargo de Puto amo a Lil Medusa" body='Prepárate para superar tus limites.'></app-chronology-card>
   </div>
-  <div class="basis-6/12 flex flex-col gap-[6rem]">
+  <div class="basis-6/12 flex flex-col">
     <app-svg-icon class="svg-arrow ml-[10rem]"  [path]="'assets/images/arrow.svg'"></app-svg-icon>
     <app-chronology-card left="true" srcImage="info_style.png" title="Fundación de Al Filo" body='Prepárate para superar tus limites.'></app-chronology-card>
     <app-chronology-card left="true" srcImage="info_style.png" title="Lil Medusa se presenta al cargo de Puto amo" body='Prepárate para superar tus limites.'></app-chronology-card>
