--- a/src/app/components/chronology-card/chronology-card.component.css
+++ b/src/app/components/chronology-card/chronology-card.component.css
@@ -1,7 +1,32 @@
-.left {
-  margin-left: -0.7rem;
-}
+.chronology-card {
+  .radio,
+  .info-wrapper {
+    cursor: pointer;
+  }
 
-.right {
-  margin-right: -0.7rem;
+  .radio {
+    background-color: white;
+    &:hover {
+      background-color: #8cb9ca;
+    }
+  }
+
+  .radio-selected {
+    --tw-bg-opacity: 1;
+    background-color: #0394cc;
+    animation: radiomark var(--animation-input, 0.2s) ease-in-out;
+    box-shadow: 0 0 0 4px hsl(var(--b1)) inset, 0 0 0 4px hsl(var(--b1)) inset;
+    &:hover {
+      background-color: #0394cc;
+    }
+  }
+
+  .left {
+    margin-left: -0.8rem;
+  }
+
+  .right {
+    margin-right: -0.8rem;
+    order: 2;
+  }
 }
