--- a/src/app/components/landing-activities/landing-activities.component.css
+++ b/src/app/components/landing-activities/landing-activities.component.css
@@ -15,16 +15,18 @@
       background-color: white;
       width: 5rem;
       height: 5rem;
+    }
 
-      &.checked {
-        background-color: #0394cc;
-      }
+    .svg-circle {
+      width: 1rem;
+      height: 2rem;
+      background-color: white;
     }
 
     &:hover {
       cursor: pointer;
 
-      .radio,
+      .svg-circle,
       .svg-activity {
         background-color: #8cb9ca;
       }
@@ -32,15 +34,14 @@
 
     &.selected,
     &.selected:hover {
-      .svg-activity {
+      .svg-activity,
+      .svg-circle {
         background-color: #0394cc;
       }
 
-      .radio {
-        --tw-bg-opacity: 1;
-        background-color: #0394cc;
-        animation: radiomark var(--animation-input, 0.2s) ease-in-out;
-        box-shadow: 0 0 0 4px hsl(var(--b1)) inset, 0 0 0 4px hsl(var(--b1)) inset;
+      .svg-circle {
+        width: 2rem;
+        height: 2rem;
       }
 
       .title-activity {
