--- a/src/app/components/landing-chronology/landing-chronology.component.css
+++ b/src/app/components/landing-chronology/landing-chronology.component.css
@@ -9,5 +9,10 @@
     background-color: white;
     width: 5rem;
     height: 5rem;
+    cursor: pointer;
+
+    &:hover {
+      background-color: #0394cc;
+    }
   }
 }
