--- a/src/app/components/landing-chronology/landing-chronology.component.html
+++ b/src/app/components/landing-chronology/landing-chronology.component.html
@@ -1,13 +1,13 @@
 <div class="landing-chronology bg-[url('/assets/images/background-landing-chronology.jpg')] bg-cover max-w-2k mx-auto flex">
-  <div class="border-r-2 border-b-2 basis-6/12 rounded-br-2xl h-[90vh] flex flex-col items-end gap-[9rem]">
+  <div class="border-r-2 border-b-2 basis-6/12 rounded-br-2xl h-[90vh] flex flex-col items-end justify-between pb-[2rem]">
     <div class="title text-[6rem] self-center">CRONOLOGÍA</div>
-    <app-chronology-card left="false" srcImage="info_style.png" title="Se une Lil Medusa" body='Prepárate para superar tus limites.'></app-chronology-card>
-    <app-chronology-card left="false" srcImage="info_style.png" title="Se otorga el cargo de Puto amo a Lil Medusa" body='Prepárate para superar tus limites.'></app-chronology-card>
+    <app-chronology-card class="w-[80%]" left="false" srcImage="info_style.png" title="Se une Lil Medusa" body='Prepárate para superar tus limites.'></app-chronology-card>
+    <app-chronology-card class="w-[80%]" left="false" srcImage="info_style.png" title="Se otorga el cargo de Puto amo a Lil Medusa" body='Prepárate para superar tus limites.'></app-chronology-card>
   </div>
-  <div class="basis-6/12 flex flex-col">
+  <div class="basis-6/12 flex flex-col justify-between">
     <app-svg-icon class="svg-arrow ml-[10rem]"  [path]="'assets/images/arrow.svg'"></app-svg-icon>
-    <app-chronology-card left="true" srcImage="info_style.png" title="Fundación de Al Filo" body='Prepárate para superar tus limites.'></app-chronology-card>
-    <app-chronology-card left="true" srcImage="info_style.png" title="Lil Medusa se presenta al cargo de Puto amo" body='Prepárate para superar tus limites.'></app-chronology-card>
+    <app-chronology-card class="w-[80%]" left="true" srcImage="info_style.png" title="Fundación de Al Filo" body='Prepárate para superar tus limites.'></app-chronology-card>
+    <app-chronology-card class="w-[80%]" left="true" srcImage="info_style.png" title="Lil Medusa se presenta al cargo de Puto amo" body='Prepárate para superar tus limites.'></app-chronology-card>
     <app-svg-icon class="svg-arrow origin-center rotate-180 ml-[10rem]" [path]="'assets/images/arrow.svg'"></app-svg-icon>
   </div>
 </div>
