--- a/src/app/components/chronology-card/chronology-card.component.html
+++ b/src/app/components/chronology-card/chronology-card.component.html
@@ -1,10 +1,10 @@
 <div class="chronology-card flex gap-5">
-  <div [ngClass]="{'left': left, 'right': !left, 'radio-selected': active}" class="radio radio-info bg-white"></div>
-  <div class="info-wrapper flex">
-    <div class="card border h-52 w-[32rem] bg-black shadow-xl bg-opacity-75">
+  <app-svg-icon [ngClass]="{'left': left, 'right': !left}" class="svg-circle mt-1rem" [path]="'assets/images/circle.svg'"></app-svg-icon>
+  <div class="info-wrapper flex w-full">
+    <div class="card border w-full bg-black shadow-xl bg-opacity-75">
       <div  class="flex h-full">
-        <img src="/assets/images/{{srcImage}}" alt="Logo" class="rounded-l-2xl w-5/12 object-cover" />
-        <div class="card-body">
+        <img src="/assets/images/{{srcImage}}" alt="Logo" class="rounded-l-2xl w-4/12 object-cover" />
+        <div class="card-body w-8/12">
           <h2 class="card-title text-white">{{title}}</h2>
           <p class="text-white">{{body}}</p>
         </div>
