change logo to svg format

--- a/src/app/components/join-card/join-card.component.html
+++ b/src/app/components/join-card/join-card.component.html
@@ -1,7 +1,7 @@
 <div [@fadeInOut]="isVisible ? 'visible' : 'hidden'">
   <div class="card w-[32rem] bg-black shadow-xl bg-opacity-75 ">
     <figure class="px-32 pt-5">
-      <img src="/assets/images/logo.png" alt="Logo" class="rounded-xl w-40"/>
+      <img src="/assets/images/logo.svg" alt="Logo" class="w-40"/>
     </figure>
     <div class="card-body pt-5 items-center text-center ">
       <p class="pb-5 text-xl text-base">La aventura te espera</p>
