--- a/src/app/components/join-card/join-card.component.html
+++ b/src/app/components/join-card/join-card.component.html
@@ -8,7 +8,7 @@
       <div>
         <a href="https://discord.com/invite/ADgezdG" target="_blank"
            class="btn w-20 discord-anim rounded-full hover:bg-black bg-black border-0 border-white ">
-          <app-svg-discord class="svg-move absolute z-10"></app-svg-discord>
+          <img class="w-10 h-10 svg-move absolute z-10" alt="Discord Logo" src="assets/images/discord.svg">
           <p class="absolute text-anim z-0">Únete a AlFilo</p>
         </a>
       </div>
