--- a/src/app/components/chronology-card/chronology-card.component.html
+++ b/src/app/components/chronology-card/chronology-card.component.html
@@ -1,7 +1,7 @@
 <div class="chronology-card flex gap-5">
-  <app-svg-icon [ngClass]="{'left': left, 'right': !left}" class="svg-circle mt-1rem" [path]="'assets/images/circle.svg'"></app-svg-icon>
+  <app-svg-icon class="svg-circle self-center {{cssClassSide}}" [path]="'assets/images/circle.svg'"></app-svg-icon>
   <div class="info-wrapper flex w-full">
-    <div class="card border w-full bg-black shadow-xl bg-opacity-75">
+    <div class="card border h-[20vh] w-full bg-black shadow-xl bg-opacity-75">
       <div  class="flex h-full">
         <img src="/assets/images/{{srcImage}}" alt="Logo" class="rounded-l-2xl w-4/12 object-cover" />
         <div class="card-body w-8/12">
