--- a/src/app/components/landing-chronology/landing-chronology.component.css
+++ b/src/app/components/landing-chronology/landing-chronology.component.css
@@ -2,7 +2,7 @@
   height: calc(100vh - 66px);
 
   .title {
-    font-family: 'Capital Daren';
+    font-family: 'Capital Daren Italic';
   }
 
   .svg-arrow {
@@ -12,7 +12,7 @@
     cursor: pointer;
 
     &:hover {
-      background-color: #0394cc;
+      background-color: #8cb9ca;
     }
   }
 }
