add logo in navbar

--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -13,7 +13,9 @@
         </li>
       </ul>
     </div>
-    <a class="btn btn-ghost normal-case text-xl hidden lg:flex">AlFilo</a>
+    <a href="/" class="absolute top-0 left-0 h-[7rem] w-[7rem] ml-[8vw]">
+      <img src="/assets/images/logo.svg" class="h-full w-full"/>
+    </a>
   </div>
 
   <div class="navbar-end">
