hotfix change discord logo in landing join

--- a/src/app/components/join-card/join-card.component.css
+++ b/src/app/components/join-card/join-card.component.css
@@ -26,9 +26,9 @@
   transition: transform 0.5s , opacity 0.5s ;
 }
 
-.discord-svg{
+.discord-svg {
   width: 2.5rem;
   height: 2.5rem;
-  background-color: #5865F2;
+  background-color: white;
 }
 
