--- a/src/app/components/landing-activities/landing-activities.component.html
+++ b/src/app/components/landing-activities/landing-activities.component.html
@@ -10,7 +10,7 @@
         <a href="https://robertsspaceindustries.com" target="_blank" class="btn text-black ring-2 ring-white rounded-2xl font-black">Juega Star Citizen</a>
       </div>
     </div>
-    <div class="basis-4/12 border-t-2 border-r-2 w-6/12 self-start rounded-tr-2xl flex flex-col items-end">
+    <div class="basis-4/12 border-t-2 border-r-2 w-[50.07%] self-start rounded-tr-2xl flex flex-col items-end">
       <div class="-mt-[9.3rem] flex gap-10">
         <ng-template ngFor let-activity [ngForOf]="activities" let-i="index">
           <div (click)="changeCurrentActivity(activity.name)" [class.selected] = "currentActivitiy['name'] === activity.name" class="activity-option flex flex-col items-center gap-3 text-white hover:text-[#8cb9ca]">
