fix new structure

--- a/src/app/components/chronology-card/chronology-card.component.css
+++ b/src/app/components/chronology-card/chronology-card.component.css
@@ -3,14 +3,9 @@
     width: 1rem;
     height: 1rem;
     background-color: white;
+  }
 
-    &.left {
-      margin-left: -0.5rem;
-    }
-
-    &.right {
-      margin-right: -0.5rem;
-      order: 2;
-    }
+  .right {
+    order: 2;
   }
 }
