--- a/src/app/components/chronology-card/chronology-card.component.html
+++ b/src/app/components/chronology-card/chronology-card.component.html
@@ -1,9 +1,9 @@
 <div class="chronology-card flex gap-5">
-  <app-svg-icon class="svg-circle self-center {{cssClassSide}}" [path]="'assets/images/circle.svg'"></app-svg-icon>
+  <app-svg-icon class="svg-circle self-center" [ngClass]="{'right': position % 2 === 0}" [path]="'assets/images/circle.svg'"></app-svg-icon>
   <div class="info-wrapper flex">
     <div class="card border w-[30vw] bg-black shadow-xl bg-opacity-75">
       <div  class="flex h-full">
-        <img src="/assets/images/{{srcImage}}" alt="Logo" class="rounded-l-2xl w-4/12 object-cover" />
+        <img src="/assets/images/{{srcImage}}" alt="Logo" class="rounded-l-2xl w-4/12 object-cover"/>
         <div class="card-body">
           <h2 class="card-title text-white">{{title}}</h2>
           <p class="text-white">{{body}}</p>
