created landing-creators, added fullpage scrolling

--- a/src/app/components/landing-activities/landing-activities.component.html
+++ b/src/app/components/landing-activities/landing-activities.component.html
@@ -1,4 +1,4 @@
-<div class="landing-activities max-w-2k mx-auto flex justify-center">
+<div class="landing-activities max-w-2k mx-auto flex w-full justify-center">
   <video #myVideo class="background-video absolute max-w-2k w-full object-cover -z-10" autoplay loop muted playsinline="true" webkit-playsinline="true" [src]="currentActivitiy.videoSrc" type="video/mp4"></video>
   <div class="flex flex-col w-full">
     <div class="basis-8/12 flex flex-col basis items-center gap-2">
