--- a/src/app/components/landing-chronology/landing-chronology.component.html
+++ b/src/app/components/landing-chronology/landing-chronology.component.html
@@ -1,4 +1,4 @@
-<div class="landing-chronology bg-[url('/assets/images/background-landing-chronology.jpg')] bg-cover max-w-2k mx-auto flex">
+<div class="landing-chronology w-full bg-[url('/assets/images/background-landing-chronology.jpg')] bg-cover max-w-2k mx-auto flex">
   <div class="border-r-2 border-b-2 basis-6/12 rounded-br-2xl h-5/6 flex justify-end p-20">
     <div class="font-bold text-7xl">CRONOLOGÍA</div>
   </div>
