--- a/src/app/components/landing-join/landing-join.component.css
+++ b/src/app/components/landing-join/landing-join.component.css
@@ -38,3 +38,9 @@
     opacity: 1;
   }
 }
+
+.background-test{
+  background-image: url("../../../assets/images/corsairAlFilo.png");
+  background-size: cover;
+}
+
