--- a/src/app/components/landing-join/landing-join.component.html
+++ b/src/app/components/landing-join/landing-join.component.html
@@ -1,6 +1,6 @@
-<div class="landing-join max-w-2k mx-auto flex justify-center">
+<div class="landing-join max-w-2k mx-auto flex justify-center relative w-full background-test">
 
-  <img class="background-video absolute max-w-2k w-full object-cover z-0" src="assets/images/corsairAlFilo.png" alt="Landing Join">
+<!--  <img class="background-video absolute max-w-2k w-full object-cover z-0" src="assets/images/corsairAlFilo.png" alt="Landing Join">-->
 
   <div class="h-full flex flex-col justify-end">
     <div class="join-card-wrap flex justify-end pb-32">
