--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -1,3 +1,7 @@
-<app-landing-join></app-landing-join>
-<app-landing-activities></app-landing-activities>
-<app-landing-chronology></app-landing-chronology>
+<div class="test">
+  <app-landing-join></app-landing-join>
+  <app-landing-activities></app-landing-activities>
+  <app-landing-chronology></app-landing-chronology>
+  <app-landing-creators></app-landing-creators>
+  <app-footer class="footer-test"></app-footer>
+</div>
