--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer p-10 bg-secondary text-neutral-content">
+<footer class="footer p-10 bg-secondary text-neutral-content w-full">
   <div>
     <div class="avatar">
       <div class="w-16 rounded">
