fix line chronology + upercase title activities

--- a/src/app/components/landing-activities/landing-activities.component.html
+++ b/src/app/components/landing-activities/landing-activities.component.html
@@ -1,5 +1,5 @@
-<div class="landing-activities max-w-2k mx-auto flex w-full justify-center">
-  <video #myVideo class="background-video absolute max-w-2k w-full object-cover -z-10" autoplay loop muted playsinline="true" webkit-playsinline="true" [src]="currentActivitiy.videoSrc" type="video/mp4"></video>
+<div class="landing-activities max-w-2k mx-auto flex w-full relative justify-center">
+  <video #myVideo class="background-video absolute max-w-2k w-full object-cover -z-10" autoplay loop muted playsinline [src]="currentActivitiy.videoSrc"></video>
   <div class="flex flex-col w-full">
     <div class="basis-8/12 flex flex-col basis items-center gap-2">
       <div class="subtitle text-[3.5rem] ml-6 pt-2">PARTICIPA EN DIFERENTES</div>
