--- a/src/app/components/landing-chronology/landing-chronology.component.html
+++ b/src/app/components/landing-chronology/landing-chronology.component.html
@@ -1,15 +1,20 @@
 <div class="landing-chronology w-full bg-[url('/assets/images/background-landing-chronology.jpg')] bg-cover max-w-2k mx-auto flex flex-col">
-  <div class="basis-[20%] w-[50.07%] border-r-2 flex justify-center">
+  <div class="basis-[20%] w-[50%] border-r-2 flex justify-center">
     <div class="title text-[6rem] ">CRONOLOGÍA</div>
   </div>
-  <div class="event-list-wrapper basis-[70%] w-[100%] flex justify-center">
-    <div class="event-list h-[70vh] w-[80%] grid grid-cols-2 gap-y-20 overflow-x-hidden">
+  <div class="event-list-wrapper basis-[70%] w-[100%] flex justify-center relative">
+    <div class="border-r-2  w-1/2 h-full absolute -left-0">
+
+    </div>
+    <div class="event-list h-[70vh] w-[80%] grid grid-cols-2 gap-y-20 overflow-x-hidden relative">
+
+
       <ng-template ngFor let-event [ngForOf]="events" let-i="index">
-        <app-chronology-card [style.grid-row-start]="i+1" [style.grid-row-end]="i+3"class="self-end" position={{event.position}} srcImage={{event.image}} title={{event.title}} body={{event.body}}></app-chronology-card>
+        <app-chronology-card [style.grid-row-start]="i+1" [style.grid-row-end]="i+3" class="self-end" position={{event.position}} srcImage={{event.image}} title={{event.title}} body={{event.body}}></app-chronology-card>
       </ng-template>
     </div>
   </div>
   <div class="basis-[10%]">
-    <div class="h-[50%] w-[50.07%] border-b-2 border-r-2 rounded-br-2xl"></div>
+    <div class="h-[50%] w-[50%] border-b-2 border-r-2 rounded-br-2xl"></div>
   </div>
 </div>
