--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -1,4 +1,4 @@
-<div class="test">
+<div class="snap-container">
   <app-landing-join></app-landing-join>
   <app-landing-activities></app-landing-activities>
   <app-landing-chronology></app-landing-chronology>
