--- a/src/app/components/landing-contact-us/landing-contact-us.component.html
+++ b/src/app/components/landing-contact-us/landing-contact-us.component.html
@@ -1,4 +1,5 @@
-<div class="landing-contact-us bg-[url('/assets/images/bg-contact-us.jpg')] bg-cover max-w-2k mx-auto flex justify-center">
+<div
+  class="landing-contact-us w-full bg-[url('/assets/images/bg-contact-us.jpg')] bg-cover max-w-2k mx-auto flex justify-center">
   <div class="flex flex-col w-full">
     <div class="basis-8/12 flex flex-col basis items-center gap-2">
       <div class="subtitle text-[3.5rem] ml-6 pt-2">contacta con</div>
@@ -14,7 +15,8 @@
           <p>- Cazarecompensas</p>
           <p>- Inteligencia</p>
           <p>- Suministros</p>
-          <a href="https://discord.com/invite/ADgezdG" target="_blank" class="btn bg-[#7289da] border-1 border-white flex justify-center content-center mt-10">
+          <a href="https://discord.com/invite/ADgezdG" target="_blank"
+             class="btn bg-[#7289da] border-1 border-white flex justify-center content-center mt-10">
             <app-svg-icon class="discord-svg" path="assets/images/discord.svg"></app-svg-icon>
             <div class="text-lg">contacta</div>
           </a>
@@ -24,15 +26,19 @@
           <div class="subtitle text-[2rem]">
             nuestras <br/>redes
           </div>
-          <a href="https://discord.com/invite/ADgezdG" target="_blank" class="btn bg-[#7289da] border-1 border-white justify-center content-center">
+          <a href="https://discord.com/invite/ADgezdG" target="_blank"
+             class="btn bg-[#7289da] border-1 border-white justify-center content-center">
             <app-svg-icon class="discord-svg" path="assets/images/discord.svg"></app-svg-icon>
             <div class="text-lg">discord</div>
           </a>
-          <a href="https://robertsspaceindustries.com/spectrum/community/ALFILO" target="_blank" class="btn bg-black border-1 border-white justify-center content-center">
+          <a href="https://robertsspaceindustries.com/spectrum/community/ALFILO" target="_blank"
+             class="btn bg-black border-1 border-white justify-center content-center">
             <img src="assets/images/logo.svg" class="h-full p-1" alt="">
             <div class="text-lg">spectrum</div>
           </a>
-          <a href="https://robertsspaceindustries.com" target="_blank" class="btn text-lg border-1 border-white text-black justify-center content-center">juega star citizen</a>
+          <a href="https://robertsspaceindustries.com" target="_blank"
+             class="btn text-lg border-1 border-white text-black justify-center content-center">juega star citizen</a>
+        </div>
       </div>
     </div>
   </div>
