--- a/src/app/components/creator-card/creator-card.component.html
+++ b/src/app/components/creator-card/creator-card.component.html
@@ -1,22 +1,36 @@
-<div class="w-[50rem] card border-2 bg-secondary p-10">
-  <div class="flex flex-col gap-4">
-    <div class="flex ">
-      <div class="flex flex-col items-center gap-4 w-1/3 ">
-        <div class="flex gap-4 self-start items-center">
+<div class="w-[80rem] card border-2 bg-secondary p-10">
+  <div class="flex flex-col gap-4 gap-y-10">
+    <div class="flex gap-5 ">
+      <div class="flex flex-col items-center gap-4 w-1/3  ">
+        <div class="flex gap-4 self-start w-full items-center">
           <div class="w-28 rounded-full">
-            <img src="/assets/images/logoHerbi.png" class="rounded-full" alt="creatorLogo"/>
+            <img src="/assets/images/{{creatorLogo}}" class="rounded-full" alt="creatorLogo"/>
           </div>
-          <p>NAME</p>
+          <p class="w-full text-center text-5xl font-medium ">{{creatorName}}</p>
         </div>
-        <p>DESCRIPTION</p>
+        <div class="w-full h-full">
+          {{creatorDescription}}
+        </div>
       </div>
-      <div class="w-2/3">
-        <video #myVideo class=" max-w-2k w-full object-cover border-2 rounded-2xl -z-10" autoplay loop muted playsinline src="assets/videos/video2.mp4" ></video>
+      <div class="w-2/3 ">
+        <video #myVideo class=" max-w-2k object-cover w-full border-2 rounded-2xl" autoplay loop muted playsinline
+               src="assets/videos/{{creatorVideo}}"></video>
       </div>
     </div>
     <div class="w-full flex justify-center ">
-      <div class="">
-        REDES
+      <div class=" flex gap-x-20">
+        <a href="{{creatorTwitch}}" target="_blank"
+          class="btn card bg-[#6441a5] w-16 h-16 border-2 border-white p-2 flex place-content-center place-items-center">
+          <img src="/assets/images/twitch.svg" alt="Logo" class="w-8"/>
+        </a>
+        <a href="{{creatorYoutube}}" target="_blank"
+          class="btn card bg-black w-16 h-16 border-2 border-white p-2 flex place-content-center place-items-center">
+          <img src="/assets/images/youtube.svg" alt="Logo" class="w-10"/>
+        </a>
+        <a href="{{creatorX}}" target="_blank"
+          class="btn card bg-black w-16 h-16 border-2 border-white p-2 flex place-content-center place-items-center">
+          <app-svg-icon class="x-svg" path="assets/images/x.svg"></app-svg-icon>
+        </a>
       </div>
     </div>
   </div>
