--- a/src/app/components/chronology-card/chronology-card.component.html
+++ b/src/app/components/chronology-card/chronology-card.component.html
@@ -3,7 +3,7 @@
   <div class="info-wrapper flex">
     <div class="card border w-[100%] max-w-[45rem] bg-black shadow-xl bg-opacity-75">
       <div  class="flex h-full">
-        <img src="/assets/images/{{srcImage}}" alt="Logo" class="rounded-l-2xl w-4/12 object-cover"/>
+        <img src="/assets/images/chronology-card/{{srcImage}}" alt="Logo" class="rounded-l-2xl w-4/12 object-cover"/>
         <div class="card-body">
           <h2 class="card-title text-white">{{title}}</h2>
           <p class="text-white">{{body}}</p>
